--- a/reflex_control/config/reflex_control.yaml
+++ b/reflex_control/config/reflex_control.yaml
@@ -11,4 +11,24 @@ reflex_takktile_2:
   preshape_1_position_controller:
     type: effort_controllers/JointPositionController
     joint: preshape_1
-    pid: {p: 0.5, i: 0.0, d: 0.0}
+    pid: {p: 2.5, i: 0.0, d: 0.0}
+
+  preshape_2_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: preshape_2
+    pid: {p: 2.5, i: 1.0, d: 1.0}
+
+  proximal_joint_1_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: proximal_joint_1
+    pid: {p: 2.5, i: 0.0, d: 0.0}
+
+  proximal_joint_2_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: proximal_joint_2
+    pid: {p: 2.5, i: 0.0, d: 0.0}
+
+  proximal_joint_3_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: proximal_joint_3
+    pid: {p: 2.5, i: 1.0, d: 1.0}
