--- a/reflex_description/package.xml
+++ b/reflex_description/package.xml
@@ -14,11 +14,17 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>urdf</build_depend>
   <build_depend>visualization_msgs</build_depend>
-
+  <build_depend>gazebo_ros</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>reflex_gazebo_msgs</build_depend>
+  
+  <run_depend>reflex_gazebo_msgs</run_depend>
+  <run_depend>std_msgs</run_depend>
   <run_depend>reflex</run_depend>s
   <run_depend>reflex_msgs2</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>urdf</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>gazebo_ros</run_depend>
 </package>
