--- a/reflex_control/config/reflex_control.yaml
+++ b/reflex_control/config/reflex_control.yaml
@@ -6,7 +6,7 @@ reflex_takktile_2:
     type: joint_state_controller/JointStateController
     publish_rate: 50  
 
-  # Position Controllers ---------------------------------------
+  # Proximal Position Controllers ---------------------------------------
 
   preshape_1_position_controller:
     type: effort_controllers/JointPositionController
@@ -31,4 +31,22 @@ reflex_takktile_2:
   proximal_joint_3_position_controller:
     type: effort_controllers/JointPositionController
     joint: proximal_joint_3
+    pid: {p: 2.5, i: 0.05, d: 0.05}
+
+
+  # Distal Position Controllers ---------------------------------------
+
+  distal_joint_1_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: distal_joint_1
+    pid: {p: 2.5, i: 0.05, d: 0.05}
+
+  distal_joint_2_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: distal_joint_2
+    pid: {p: 2.5, i: 0.05, d: 0.05}
+
+  distal_joint_3_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: distal_joint_3
     pid: {p: 2.5, i: 0.05, d: 0.05}
